<resources>
    <string name="app_name">HirWeApp</string>
    <string name="Str_email">Correo</string>
    <string name="Str_password">Contraseña</string>
    <string name="lbl_Inicio_Sesion">Ingresar</string>
    <string name="lbl_registrarse">Registrarse</string>
    <string name="lbl_recordar_password"><u>Contraseña</u></string>
    <string name="lbl_encuentra_lo_que_buscas">Encuentra lo que buscas</string>
    <string name="lbl_continuar">Continuar</string>
    <string name="lbl_login">login</string>
    <string name="lbl_ubicacion">Ubicación</string>
    <string name="lbl_direccion">Bogotá, Bogotá, CO</string>
    <string name="lbl_vermas">Ver más</string>
</resources>