<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_access_account"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"/>

    <EditText
        android:id="@+id/txt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:ems="15"
        android:hint="@string/Str_email"
        android:inputType="textEmailAddress"
        android:drawableLeft="@drawable/ic_baseline_account_circle"
        android:drawablePadding="2dp"/>

    <EditText
        android:id="@+id/txt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/Str_password"
        android:inputType="textPassword"
        android:ems="15"
        android:layout_below="@id/txt_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/ic_baseline_security"
        android:drawablePadding="2dp"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_below="@id/txt_password"
        android:layout_alignStart="@id/txt_password"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_below="@id/txt_password"
        android:layout_alignEnd="@id/txt_password"
        android:layout_marginTop="8dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btn_login"/>

</RelativeLayout>